# spatial-transcriptome-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FINAL_REPORT.md  PACKAGES.md  README.en.md  README.md  Snakefile  push.ps1  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: config.yaml  samples.yaml
docs/: API.md  PUBLISH.md  ROADMAP.md  usage.en.md  usage.md
docs/superpowers/plans/: 2026-06-09-architectural-modernization-plan.md
docs/superpowers/specs/: 2026-06-09-architectural-modernization-design.md
envs/: r-seurat.yaml  scanpy.yaml  spagcn.yaml
examples/: README.md  benchmark.py  benchmark_README.md  synthetic_end_to_end.py
plugins/cell_communication/: config.yaml  run.py
plugins/multi_sample_integration/: config.yaml  run.py
plugins/scRNA_joint_analysis/: config.yaml  run.py
plugins/spatial_domain/: config.yaml  run.py
plugins/spatial_variable_genes/: config.yaml  run.py
plugins/trajectory/: config.yaml  run.py
scripts/: publish_pypi.ps1
src/spstpipe/: __init__.py  cli.py  py.typed
src/spstpipe/core/: __init__.py  base.py  config.py  io.py  logging.py  registry.py
src/spstpipe/plugins/: __init__.py
src/spstpipe/plugins/cell_communication/: __init__.py  algorithms.py  plugin.py
src/spstpipe/plugins/multi_sample_integration/: __init__.py  algorithms.py  plugin.py
src/spstpipe/plugins/scrna_joint_analysis/: __init__.py  algorithms.py  plugin.py
src/spstpipe/plugins/spatial_domain/: __init__.py  algorithms.py  plugin.py
src/spstpipe/plugins/spatial_variable_genes/: __init__.py  algorithms.py  plugin.py
src/spstpipe/plugins/trajectory/: __init__.py  algorithms.py  plugin.py
tests/: __init__.py  conftest.py  test_end_to_end.py  test_load_data.py  test_plugin_contract.py
tests/fixtures/: __init__.py  synthetic_adata.py
tests/fixtures/synthetic_plugin/: __init__.py  plugin.py
tests/unit/: test_base.py  test_cell_communication.py  test_cli.py  test_config.py  test_io.py  test_logging.py  test_multi_sample_integration.py  test_registry.py  test_scrna_joint_analysis.py  test_spatial_domain.py  test_spatial_variable_genes.py  test_trajectory.py
workflow/: Snakefile
workflow/rules/: basic_analysis.smk  cell_communication.smk  multi_sample_integration.smk  preprocessing.smk  report.smk  scRNA_joint_analysis.smk  spatial_domain.smk  spatial_variable_genes.smk  trajectory.smk  visualization.smk
workflow/scripts/: annotation.py  clustering.py  load_data.py  preprocessing.py  report.py  visualization.py
